# ObjectOrientedProgramming

./: .gitignore  README.md
Lab1  - functions and structures/: CMakeLists.txt  LAB1.cpp
Lab2 - classes, methods and autotests/: CMakeLists.txt  LAB2.cpp  LAB2_header.hpp  LAB2_implementation.cpp  Tester_header.hpp  Tester_implementation.cpp
Lab3 - inheritance, static members, operator overloading/: CMakeLists.txt  Object_header.hpp  Object_implementation.cpp  Tester_header.hpp  Tester_implementation.cpp  Triangle_header.hpp  Triangle_implementation.cpp  main.cpp
Lab4 - polymorphism and abstract classes/: CMakeLists.txt  CMakePresets.json  Minister.cpp  main.cpp
Lab5 - template classes/: CMakeLists.txt  CMakePresets.json  MySetTemplate.hpp  main.cpp
